--- a/setup.cfg
+++ b/setup.cfg
@@ -4,6 +4,7 @@ author = Yael Balbastre
 author_email = yael.balbastre@gmail.com
 description = An abundance of augmentation layers
 long_description = file:README.md
+long_description_content_type = text/markdown
 platforms = OS Independent
 license = MIT
 license_file = LICENSE
@@ -24,9 +25,3 @@ install_requires =
     numpy
     nibabel
     torch-interpol
-dependency_links = https://github.com/balbasty/torch-interpol
-
-# dependencies to get rid of:
-# - monai:          we only use RandAffine, which can be replaced by ours
-# - torchvision:    we only use VisionDataset. We could use the vanilla
-#                   torch Dataset.
