--- a/docs/requirements.txt
+++ b/docs/requirements.txt
@@ -1,8 +1,4 @@
-
-jinja2==3.0.3
-sphinx
-sphinx-book-theme
-sphinx-autoapi
-myst-parser
-myst-nb
-m2r2
+mkdocs
+mkdocs-material
+mkdocs-jupyter
+mkdocstrings[python]>=0.18
