--- a/setup.cfg
+++ b/setup.cfg
@@ -26,3 +26,11 @@ install_requires =
     nibabel
     torch-interpol
     torch-distmap
+
+[versioneer]
+VCS = git
+style = pep440
+versionfile_source = cornucopia/_version.py
+versionfile_build = cornucopia/_version.py
+tag_prefix =
+parentdir_prefix =
