--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -7,20 +7,12 @@ docs_dir: docs
 theme: 
   name: material
   palette:
-    - primary: orange
-    - accent: orange
-    - media: "(prefers-color-scheme: light)"
-      scheme: default
-      toggle:
-        icon: material/lightbulb
-        name: Switch to dark mode
-    - media: "(prefers-color-scheme: dark)"
-      scheme: slate
-      toggle:
-        icon: material/lightbulb-outline
-        name: Switch to light mode
+    primary: orange
+    accent: orange
   icon:
     repo: fontawesome/brands/github
+  logo:
+    icons/cc.png
 plugins:
 - mkdocs-jupyter
 - mkdocstrings:
