--- a/setup.cfg
+++ b/setup.cfg
@@ -24,7 +24,7 @@ install_requires =
     torch >= 1.8
     numpy
     nibabel
-    torch-interpol
+    torch-interpol >= 0.2.4
     torch-distmap
 
 [versioneer]
