MNT(actions): fix bad __init__

--- a/.github/actions/test/action.yaml
+++ b/.github/actions/test/action.yaml
@@ -35,4 +35,4 @@ runs:
       shell: bash -el {0}
       run: |
         pip install .
-        pytest pytest --pyargs cornucopia
+        pytest --pyargs cornucopia
