Use config.cfg for everything

--- a/setup.cfg
+++ b/setup.cfg
@@ -19,6 +19,8 @@ project_urls =
     Source Code=https://github.com/balbasty/cornucopia
 
 [options]
+packages =
+    cornucopia
 python_requires = >= 3.6
 install_requires =
     torch >= 1.8
