--- a/.github/actions/test/action.yaml
+++ b/.github/actions/test/action.yaml
@@ -22,6 +22,7 @@ runs:
     - uses: conda-incubator/setup-miniconda@v2
       with:
         mamba-version: "*"
+        miniforge-version: latest
         python-version: ${{ inputs.python-version }}
         channels: balbasty,pytorch,conda-forge
         activate-environment: test-env
