--- a/.github/actions/test/action.yaml
+++ b/.github/actions/test/action.yaml
@@ -22,12 +22,13 @@ runs:
     - uses: conda-incubator/setup-miniconda@v2
       with:
         mamba-version: "*"
+        miniforge-version: latest
         python-version: ${{ inputs.python-version }}
-        channels: balbasty,pytorch,conda-forge,defaults
+        channels: balbasty,pytorch,conda-forge
         activate-environment: test-env
     - name: Install dependencies
       shell: bash -el {0}
-      env: 
+      env:
         PYTORCH_VERSION: ${{ inputs.pytorch-version }}
       run: |
         mamba install pytorch=${PYTORCH_VERSION} pytest
